# async-gen-inlining

./: Cargo.toml  README.md  type-sizes.txt
.cargo/: config.toml
src/: lib.rs  main.rs  test.rs  test1.rs  test2.rs  test3.rs
